# django_graphql

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  docker_start.sh
backend/: pyproject.toml  users.json
backend/graphql_demo/: local_settings.py  schema.py  settings.py  urls.py
backend/graphql_demo/todos/: api.py  models.py  schema.py  serializers.py
backend/graphql_demo/todos/migrations/: 0001_initial.py
backend/graphql_demo/users/: schema.py  serializers.py
backend/py-requirements/: base.txt  dev.txt  prod.txt
compose/backend/: .dockerignore  Dockerfile  run_django.sh
compose/frontend/: Dockerfile
compose/nginx/: default.conf
env/: dev.env  prod.env
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: main.js  vue-apollo.js
frontend/src/components/: HelloWorld.vue
frontend/src/components/App/: App.vue
frontend/src/components/Footer/: Footer.vue
frontend/src/components/Header/: Header.vue
frontend/src/components/Home/: Home.vue
frontend/src/components/Login/: Login.vue
frontend/src/components/Logo/: AppLogo.vue
frontend/src/components/Todo/: Todo.vue
frontend/src/components/TodoList/: TodoList.vue
frontend/src/components/Users/: Users.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/style/: main.styl
